# AI-Powered-SMS

./: README.md  package-lock.json  package.json  start-python.js  students.csv
backend/: .env  package-lock.json  package.json  server.js
backend-ai/: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend-ai/app/: config.py  main.py
backend-ai/app/api/: router.py
backend-ai/app/api/v1/: analytics.py  chatbot.py  messages_api.py  monitoring.py  predictions.py  promotions.py  training.py
backend-ai/app/core/: cache.py  database.py  security.py  vector_store.py
backend-ai/app/ml/: __init__.py  drift_detector.py  evaluation.py  pipeline.py  registry.py
backend-ai/app/ml/features/: academic.py  attendance_features.py  demographic.py  temporal.py
backend-ai/app/ml/models/: __init__.py  attendance_forecaster.py  performance_predictor.py  promotion_recommender.py  risk_classifier.py
backend-ai/app/models/: __init__.py  feedback.py  model_registry.py  prediction.py  training_job.py
backend-ai/app/nlp/: __init__.py  intent_classifier.py  query_parser.py  rag_pipeline.py  response_generator.py
backend-ai/app/schemas/: analytics.py  chatbot.py  prediction.py  training.py
backend-ai/app/tasks/: __init__.py  celery_app.py  generate_report.py  train_model.py
backend-ai/app/utils/: db_sync.py  excel_parser.py  logger.py
backend-ai/scripts/: seed_demo_data.py
backend-ai/student_management_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend-ai/tests/: test_nlp.py  test_predictions.py
frontend/: index.html  package-lock.json  (+1 more)
(+43 files in other folders)
