[project]
name = "student-management-ai"
version = "1.0.0"
description = "AI-powered Student Management System microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "joblib>=1.4.0",
    "mlflow>=2.15.0",
    "optuna>=4.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "ollama>=0.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.6",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "psutil>=6.0.0",
    "tenacity>=9.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "jupyter>=1.1.0",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
